# GLMinecraft

./: CMakeLists.txt
dependencies/glad/: glad.h
src/: config.cpp  config.h  glad.c  main.cpp
src/camera/: camera.cpp  camera.h
src/components/: transform.h
src/mesh/: block.cpp  block.h
src/shaders/: fragment.txt  shader.cpp  shader.h  vertex.txt
src/textures/: texture.cpp  texture.h
src/world_generation/: chunk.cpp  chunk.h
